@@ -1,3 +1,7 @@
+2009-06-19  higepon  <higepon@users.sourceforge.jp>
+
+        * OSCompatThread.h (scheme): Added Thread for Windows (not working).
+
 2009-06-18  higepon  <higepon@users.sourceforge.jp>
 
         * TextualOutputPort.cpp : Uses FlonumUtil::flonumToUcs4String for display/write.
